--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "element-plus": "^2.8.3",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -34,6 +35,7 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.9",
     "@types/node": "^20.14.5",
+    "@types/nprogress": "^0.2.3",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
