--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^29.5.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.79.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
